src/main/resources/forgejo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
  namespace: default
  labels:
    app: forgejo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forgejo
  template:
    metadata:
      name: forgejo
      labels:
        app: forgejo
    spec:
      containers:
        - name: forgejo
          image: IMAGE_NAME
          imagePullPolicy: IfNotPresent
          # config settings
          volumeMounts:
            - name: forgejo-data-volume
              mountPath: "/data"
          ports:
            - containerPort: 22
              name: git-ssh
            - containerPort: 3000
              name: forgejo
      volumes:
        - name: forgejo-data-volume
          persistentVolumeClaim:
            claimName: forgejo-data-pvc
