src/main/resources/forgejo/service-ssh.yaml
kind: Service
apiVersion: v1
metadata:
  name: forgejo-ssh-service
  namespace: forgejo
  annotations: 
    metallb.universe.tf/allow-shared-ip: "shared-ip-service-group"
    metallb.universe.tf/address-pool: "public"
spec:
  type: LoadBalancer
  ipFamilies:
  - IPv4
  - IPv6
  ipFamilyPolicy: PreferDualStack
  selector:
    app: forgejo
  ports:
    - port: 2222
      targetPort: 22
      protocol: TCP
