src/main/resources/forgejo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-forgejo
  namespace: default
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd    
spec:
  tls:
    - hosts:
        - FQDN
      secretName: forgejo-cert
  rules:
    - host: FQDN
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: forgejo-service
                port:
                  number: 3000
